[gd_scene load_steps=6 format=3 uid="uid://v5gly08q5ort"]

[ext_resource type="Script" uid="uid://b5h0jjqc6d52" path="res://scripts/game_over_screen.gd" id="1_y8man"]
[ext_resource type="FontFile" uid="uid://wjo7m0jbnk46" path="res://Assets/brackeys_platformer_assets/brackeys_platformer_assets/fonts/PixelOperator8-Bold.ttf" id="2_kk8k2"]
[ext_resource type="FontFile" uid="uid://ci4jiut4vg0i4" path="res://Assets/brackeys_platformer_assets/brackeys_platformer_assets/fonts/PixelOperator8.ttf" id="3_e5yba"]

[sub_resource type="LabelSettings" id="LabelSettings_erv1k"]
font_size = 150
font_color = Color(0.099502616, 0.4671737, 0.99999994, 1)
outline_size = 40
outline_color = Color(0, 0.2587991, 0.47562635, 1)
shadow_size = 60
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-6, 1)

[sub_resource type="Theme" id="Theme_48xlc"]

[node name="GameOverScreen" type="Node2D"]
script = ExtResource("1_y8man")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
offset_right = 1919.0
offset_bottom = 1077.0
mouse_filter = 2
color = Color(0.99999875, 0.30159363, 0.32799163, 0.8980392)

[node name="Title" type="Label" parent="."]
offset_right = 1920.0
offset_bottom = 500.0
theme_override_colors/font_color = Color(0.792942, 0, 0.20853412, 1)
theme_override_fonts/font = ExtResource("2_kk8k2")
theme_override_font_sizes/font_size = 16
text = "GAME OVER!"
label_settings = SubResource("LabelSettings_erv1k")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainContainer" type="CenterContainer" parent="."]
offset_top = 400.0
offset_right = 1920.0
offset_bottom = 1080.0
theme = SubResource("Theme_48xlc")

[node name="MainButtons" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MainMenu" type="Button" parent="MainContainer/MainButtons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_e5yba")
theme_override_font_sizes/font_size = 75
text = "MainMenu
"

[node name="Credits" type="Button" parent="MainContainer/MainButtons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_e5yba")
theme_override_font_sizes/font_size = 75
text = "Credits
"

[node name="CreditsMenu" type="VBoxContainer" parent="MainContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 100

[node name="Label" type="Label" parent="MainContainer/CreditsMenu"]
custom_minimum_size = Vector2(1920, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_kk8k2")
theme_override_font_sizes/font_size = 75
text = "A Game by Yatharth Chawhan"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Back" type="Button" parent="MainContainer/CreditsMenu"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_e5yba")
theme_override_font_sizes/font_size = 75
text = "back
"

[connection signal="pressed" from="MainContainer/MainButtons/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="MainContainer/MainButtons/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MainContainer/CreditsMenu/Back" to="." method="_on_back_pressed"]
